fix particle container overflow on mobile

--- a/less/random_diet_club.less
+++ b/less/random_diet_club.less
@@ -579,6 +579,9 @@ body {
 }
 #particles {
     position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 2000px;
 }
 
 
